[package]
name = "network-programming"
version = "0.1.0"
authors = ["choimake <choimake330@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# add crate
# url: https://doc.rust-jp.rs/rust-by-example-ja/crates.html#:~:text=%E3%82%AF%E3%83%AC%E3%83%BC%E3%83%88%E3%81%AFRust%E3%81%AB%E3%81%8A%E3%81%91%E3%82%8B%E3%82%B3%E3%83%B3%E3%83%91%E3%82%A4%E3%83%AB%E3%81%AE%E5%8D%98%E4%BD%8D%E3%81%A7%E3%81%99%E3%80%82&text=%E3%82%AF%E3%83%AC%E3%83%BC%E3%83%88%E3%81%AF%E3%83%90%E3%82%A4%E3%83%8A%E3%83%AA%E3%81%82%E3%82%8B%E3%81%84%E3%81%AF%E3%83%A9%E3%82%A4%E3%83%96%E3%83%A9%E3%83%AA,%E3%81%93%E3%81%A8%E3%81%A7%E3%82%AA%E3%83%BC%E3%83%90%E3%83%BC%E3%83%A9%E3%82%A4%E3%83%89%E3%81%A7%E3%81%8D%E3%81%BE%E3%81%99%E3%80%82
log = "0.4.11"
env_logger = "0.8.2"
failure = "0.1.8"
